--- a/boilerplates/react-union-boilerplate-monorepo/package.json
+++ b/boilerplates/react-union-boilerplate-monorepo/package.json
@@ -17,14 +17,14 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
     "eslint": "4.7.2",
-    "eslint-config-react-union": "0.4.0",
+    "eslint-config-react-union": "^0.6.0",
     "eslint-plugin-babel": "4.1.2",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-react": "7.4.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "prettier": "1.10.2",
-    "react-union-scripts": "^0.5.5"
+    "react-union-scripts": "^0.6.0"
   },
   "scripts": {
     "build": "react-union-scripts build",
