--- a/boilerplates/react-union-boilerplate-basic/package.json
+++ b/boilerplates/react-union-boilerplate-basic/package.json
@@ -8,7 +8,7 @@
     "node": ">=8"
   },
   "dependencies": {
-    "babel-polyfill": "6.23.0",
+    "@babel/polyfill": "^7.0.0",
     "classnames": "2.2.5",
     "prop-types": "15.6.1",
     "react": "16.4.1",
@@ -18,16 +18,17 @@
     "redbox-react": "1.6.0"
   },
   "devDependencies": {
-    "babel-eslint": "8.0.1",
-    "babel-preset-react": "6.23.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "babel-core": "^7.0.0-0",
+    "babel-eslint": "^9.0.0",
+    "babel-preset-react-union": "0.6.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "^3.3.4",
-    "eslint": "4.7.2",
-    "eslint-config-react-union": "^0.6.0",
-    "eslint-plugin-babel": "4.1.2",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-react": "7.4.0",
+    "eslint": "^5.5.0",
+    "eslint-plugin-babel": "^5.2.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-config-react-union": "0.6.0",
     "husky": "^0.14.3",
     "lint-staged": "^7.2.0",
     "prettier": "^1.13.5",
