--- a/packages/react-union-scripts/package.json
+++ b/packages/react-union-scripts/package.json
@@ -16,20 +16,10 @@
     "node": ">=8"
   },
   "dependencies": {
-    "babel-cli": "6.23.0",
-    "babel-core": "6.23.1",
-    "babel-jest": "22.4.3",
-    "babel-loader": "7.1.4",
-    "babel-plugin-transform-class-properties": "6.23.0",
-    "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "babel-plugin-transform-react-constant-elements": "6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.3.2",
-    "babel-plugin-transform-regenerator": "6.22.0",
-    "babel-plugin-transform-runtime": "6.22.0",
-    "babel-preset-env": "1.2.1",
-    "babel-preset-react": "6.23.0",
-    "babel-preset-stage-1": "6.22.0",
-    "babel-runtime": "6.23.0",
+    "babel-core": "^7.0.0-0",
+    "babel-jest": "^23.4.2",
+    "babel-loader": "^8.0.2",
+    "babel-preset-react-union": "0.6.0",
     "browser-sync": "2.23.6",
     "bundle-loader": "0.5.6",
     "clean-webpack-plugin": "0.1.19",
@@ -43,7 +33,7 @@
     "html-webpack-plugin": "3.2.0",
     "http-proxy-middleware": "^0.18.0",
     "invariant": "2.2.1",
-    "jest": "23.2.0",
+    "jest": "23.5.0",
     "mkdirp": "0.5.1",
     "ncp": "2.0.0",
     "node-sass": "4.5.3",
