--- a/packages/react-union/package.json
+++ b/packages/react-union/package.json
@@ -2,19 +2,15 @@
   "name": "react-union",
   "version": "0.6.0",
   "license": "MIT",
-  "main": "lib/index.js",
-  "module": "es/index.js",
-  "jsnext:main": "es/index.js",
+  "main": "lib/react-union.js",
+  "module": "es/react-union.js",
+  "jsnext:main": "es/react-union.js",
   "repository": "https://github.com/lundegaard/react-union",
   "contributors": [
     "Tomas Konrady <tomas.konrady@lundegaard.eu>",
     "Vaclav Jancarik <vaclav.jancarik@lundegaard.eu>"
   ],
   "description": "Component for assembling distributed HTML fragments into one logic React application",
-  "engines": {
-    "node": ">=6.5",
-    "npm": ">=3.10"
-  },
   "files": [
     "src",
     "lib",
@@ -23,50 +19,35 @@
   ],
   "dependencies": {
     "prop-types": "15.6.1",
-    "ramda": "0.25.0"
+    "ramda": "0.25.0",
+    "rollup-plugin-commonjs": "^9.1.6"
   },
   "devDependencies": {
-    "babel-cli": "6.23.0",
-    "babel-core": "6.23.1",
-    "babel-eslint": "8.0.1",
-    "babel-jest": "22.4.3",
-    "babel-plugin-external-helpers": "6.22.0",
-    "babel-plugin-transform-class-properties": "6.23.0",
-    "babel-plugin-transform-object-rest-spread": "6.23.0",
-    "babel-plugin-transform-react-constant-elements": "6.23.0",
-    "babel-plugin-transform-regenerator": "6.22.0",
-    "babel-plugin-transform-runtime": "6.22.0",
-    "babel-preset-env": "1.2.1",
-    "babel-preset-react": "6.23.0",
-    "babel-preset-stage-1": "6.22.0",
-    "babel-runtime": "6.23.0",
+    "babel-core": "^7.0.0-0",
+    "babel-preset-react-union": "0.6.0",
     "cross-env": "5.1.1",
-    "enzyme": "^3.3.0",
-    "eslint": "4.17.0",
-    "jest": "23.2.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "jsdom": "^11.11.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "rollup": "0.52.0",
-    "rollup-plugin-babel": "3.0.2",
-    "rollup-plugin-commonjs": "8.2.6",
-    "rollup-plugin-node-resolve": "3.0.0",
-    "rollup-plugin-replace": "2.0.0",
-    "rollup-plugin-uglify": "2.0.1"
+    "rollup": "^0.65.2",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.1.6",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "rollup-plugin-terser": "^2.0.2"
   },
   "peerDependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
   },
   "scripts": {
-    "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
-    "build:es": "babel src --out-dir es",
-    "build:umd": "cross-env BABEL_ENV=rollup NODE_ENV=development rollup -c -o dist/react-union.js",
-    "build:umd:min": "cross-env BABEL_ENV=rollup NODE_ENV=production rollup -c -o dist/react-union.min.js",
+    "build:commonjs": "cross-env NODE_ENV=cjs rollup -c -o lib/react-union.js",
+    "build:es": "cross-env BABEL_ENV=es NODE_ENV=es rollup -c -o es/react-union.js",
+    "build:umd": "cross-env BABEL_ENV=es NODE_ENV=development rollup -c -o dist/react-union.js",
+    "build:umd:min": "cross-env BABEL_ENV=es NODE_ENV=production rollup -c -o dist/react-union.min.js",
     "build": "yarn build:commonjs && yarn build:es && yarn build:umd && yarn build:umd:min",
-    "test": "yarn lint:js",
-    "prepublish": "yarn test && yarn build",
-    "format": "prettier --write \"src/**/*.js\"",
-    "lint:js": "eslint --fix --ext .js \"src/**\""
+    "prepublish": "yarn build"
   }
 }
