--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: node_js
 node_js:
-  - 8
+  - 10
 cache:
   yarn: true
   directories:
     - node_modules
-script:
-  node ./scripts/CI/repoIntegrity.js
+script: node ./scripts/CI/repoIntegrity.js
