--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - 10
+before_install:
+  - curl -o- -L https://yarnpkg.com/install.sh | bash
 cache:
   yarn: true
   directories:
