--- a/boilerplates/react-union-boilerplate-liferay-basic/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-basic/package.json
@@ -26,6 +26,7 @@
     "husky": "^3.0.5",
     "lint-staged": "^9.2.5",
     "mkdirp": "^0.5.1",
+    "liferay-npm-bundler": "^2.13.2",
     "prettier": "^1.16.3",
     "ramda": "^0.26.1",
     "ramda-extension": "^0.10.0",
@@ -33,8 +34,12 @@
     "rimraf": "^3.0.0"
   },
   "scripts": {
-    "build": "react-union-scripts build --release --target liferay && node ./tools/amdLoaderScripts.js --release",
-    "build:dev": "react-union-scripts build --target liferay && node ./tools/amdLoaderScripts.js",
+    "build": "yarn clean && yarn build:liferay && yarn bundle",
+    "build:dev": "yarn clean && yarn build:liferay-dev && yarn bundle",
+    "build:liferay": "react-union-scripts build --release --target liferay && node ./tools/amdLoaderScripts.js",
+    "build:liferay-dev": "react-union-scripts build --target liferay && node ./tools/amdLoaderScripts.js",
+    "bundle": "liferay-npm-bundler",
+    "clean": "rimraf build",
     "start": "react-union-scripts start --app app-demo",
     "start:proxy": "yarn start --proxy --target liferay",
     "test": "react-union-scripts test",
