--- a/boilerplates/react-union-boilerplate-liferay-ssr/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-ssr/package.json
@@ -24,6 +24,7 @@
     "fs-extra": "^8.1.0",
     "glob": "^7.1.3",
     "husky": "^3.0.5",
+    "liferay-npm-bundler": "^2.13.2",
     "lint-staged": "^9.2.5",
     "mkdirp": "^0.5.1",
     "prettier": "^1.16.3",
@@ -33,8 +34,12 @@
     "rimraf": "^3.0.0"
   },
   "scripts": {
-    "build": "react-union-scripts build --release --target liferay && node ./tools/amdLoaderScripts.js --release",
-    "build:dev": "react-union-scripts build --target liferay && node ./tools/amdLoaderScripts.js",
+    "build": "yarn clean && yarn build:liferay && yarn bundle",
+    "build:dev": "yarn clean && yarn build:liferay-dev && yarn bundle",
+    "build:liferay": "react-union-scripts build --release --target liferay && node ./tools/amdLoaderScripts.js",
+    "build:liferay-dev": "react-union-scripts build --target liferay && node ./tools/amdLoaderScripts.js",
+    "bundle": "liferay-npm-bundler",
+    "clean": "rimraf build",
     "start": "react-union-scripts start --app app-demo",
     "start:proxy": "yarn start --proxy --target liferay",
     "test": "react-union-scripts test",
@@ -45,13 +50,11 @@
     "packages/*"
   ],
   "lint-staged": {
-
       "**/*.js": [
         "prettier --write",
         "yarn lint --fix",
         "git add"
       ]
-
   },
   "jest": {
     "snapshotSerializers": [
