--- a/boilerplates/react-union-boilerplate-liferay-ssr/package.json
+++ b/boilerplates/react-union-boilerplate-liferay-ssr/package.json
@@ -21,8 +21,6 @@
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-react": "^7.12.4",
-    "fs-extra": "^8.1.0",
-    "glob": "^7.1.3",
     "husky": "^3.0.5",
     "liferay-npm-bundler": "^2.13.2",
     "lint-staged": "^9.2.5",
@@ -30,15 +28,16 @@
     "prettier": "^1.16.3",
     "ramda": "^0.26.1",
     "ramda-extension": "^0.10.0",
+    "react-union-liferay-build-tools": "^0.13.1",
     "react-union-scripts": "^0.13.1",
     "rimraf": "^3.0.0"
   },
   "scripts": {
     "build": "yarn clean && yarn build:liferay && yarn bundle",
     "build:dev": "yarn clean && yarn build:liferay-dev && yarn bundle",
-    "build:liferay": "react-union-scripts build --release --target liferay && node ./tools/amdLoaderScripts.js",
-    "build:liferay-dev": "react-union-scripts build --target liferay && node ./tools/amdLoaderScripts.js",
-    "bundle": "liferay-npm-bundler",
+    "build:liferay": "react-union-scripts build --release --target liferay",
+    "build:liferay-dev": "react-union-scripts build --target liferay",
+    "bundle": "react-union-liferay-build-tools bundle && liferay-npm-bundler",
     "clean": "rimraf build",
     "start": "react-union-scripts start --app app-demo",
     "start:proxy": "yarn start --proxy --target liferay",
