--- a/lerna.json
+++ b/lerna.json
@@ -1,12 +1,12 @@
 {
   "lerna": "2.2.0",
-  "version": "0.13.1",
+  "version": "0.14.0",
   "command": {
     "init": {
       "exact": true
     },
     "publish": {
-      "ignore": [
+      "ignoreChanges": [
         "*.md",
         "test/**"
       ]
