--- a/boilerplates/react-union-boilerplate-liferay/packages/widget-content/package.json
+++ b/boilerplates/react-union-boilerplate-liferay/packages/widget-content/package.json
@@ -8,10 +8,10 @@
 	},
 	"main": "src/index.js",
 	"dependencies": {
+		"@union-liferay/ui-components": "^0.0.1",
 		"prop-types": "^15.7.2",
-		"react": "^16.12.0",
-		"react-dom": "^16.12.0",
-		"@union-liferay/ui-components": "^0.0.1"
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1"
 	},
 	"devDependencies": {
 		"enzyme": "^3.11.0"
