--- a/packages/react-union-liferay-build-tools/package.json
+++ b/packages/react-union-liferay-build-tools/package.json
@@ -16,10 +16,10 @@
 		"node": ">=8"
 	},
 	"dependencies": {
-		"fs-extra": "^8.1.0",
-		"glob": "^7.1.3",
-		"ramda": "^0.26.1",
+		"execa": "^4.0.0",
+		"fs-extra": "^9.0.0",
+		"glob": "^7.1.6",
 		"liferay-npm-bundler": "^2.13.2",
-		"execa": "^4.0.0"
+		"ramda": "^0.27.0"
 	}
 }
