--- a/packages/babel-preset-react-union/package.json
+++ b/packages/babel-preset-react-union/package.json
@@ -9,9 +9,14 @@
     "Tomas Konrady <tomas.konrady@lundegaard.eu>",
     "Vaclav Jancarik <vaclav.jancarik@lundegaard.eu>"
   ],
+  "peerDependencies": {
+    "@babel/core": "^7.11.6",
+    "core-js": "^3.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.11.6"
+  },
   "dependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/core": "^7.10.4",
     "@babel/plugin-external-helpers": "^7.10.4",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.4",
@@ -21,10 +26,9 @@
     "@babel/plugin-proposal-function-sent": "^7.10.4",
     "@babel/plugin-proposal-json-strings": "^7.10.4",
     "@babel/plugin-proposal-logical-assignment-operators": "^7.10.4",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
     "@babel/plugin-proposal-numeric-separator": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.10.4",
     "@babel/plugin-proposal-throw-expressions": "^7.10.4",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -32,10 +36,16 @@
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/plugin-transform-react-constant-elements": "^7.10.4",
     "@babel/plugin-transform-regenerator": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.5",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
-    "@babel/runtime": "^7.10.4",
-    "babel-plugin-universal-import": "^4.0.2"
+    "@babel/runtime": "^7.11.2",
+    "babel-plugin-universal-import": "^4.0.2",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
+
+    "@babel/plugin-transform-spread": "^7.11.0",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-macros": "^2.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24"
   }
 }
