--- a/packages/babel-preset-react-union/package.json
+++ b/packages/babel-preset-react-union/package.json
@@ -37,6 +37,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/plugin-transform-react-constant-elements": "^7.10.4",
     "@babel/plugin-transform-regenerator": "^7.10.4",
+    "@babel/plugin-transform-destructuring": "^7.10.4",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/plugin-transform-spread": "^7.11.0",
     "@babel/preset-env": "^7.11.5",
@@ -45,6 +46,6 @@
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-macros": "^2.8.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "babel-plugin-universal-import": "^4.0.2"
+    "babel-plugin-universal-import": "^3.1.3"
   }
 }
